--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@gsap/react": "^2.1.2",
     "@react-three/drei": "^9.80.1",
     "@react-three/fiber": "^8.13.6",
     "framer-motion": "^10.15.0",
-    "maath": "^0.7.0",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.525.0",
+    "maath": "^0.10.8",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-tilt": "^1.0.2",
